Fix content class sizing on small screens.

--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -1,10 +1,16 @@
 @media (max-width: 750px) {
   %main-mob {
-    width: 100%;
+    width: 80%;
   }
 
   main {
     padding-top: 4em;
+  }
+
+  .content {
+    @extend %main-mob;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   #people {
